[package]
name = "marksman"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.4"
dirs = "5.0.1"
anyhow = "1.0.86"
reqwest = { version = "0.12.4", features = ["json"] }
serde_json = "1.0.117"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
prettytable-rs = "=0.6.5"
urlencoding = "2.1.3"
serde = { version = "1.0.202", features = ["derive"] }
toml = "0.8.13"
chrono = "0.4.38"
regex = "1.10.4"
futures = "0.3.30"
log = "0.4.21"
rand = "0.8"